--- a/index.html
+++ b/index.html
@@ -7,8 +7,46 @@
     <meta name="keywords" content="No matter, группа, музыкальная группа">
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav>
+            Навигация по странице
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Главная</h1>
+        </section>
+        <section>
+            <h1>Кто мы такие?</h1>
+            <blockquote>
+                <p>It doesn't matter who we are. What matters is our music.</p>
+                <cite>No Matter</cite>
+            </blockquote>
+            <p>Как появилась группа?</p>
+            <p>Почему именно <strong>No Matter?</strong></p>
+        </section>
+        <section>
+            <h1>Альбомы</h1>
+        </section>
+    </main>
+    <footer>
+        <section>
+            <h4>Контактная информация</h4>
+        </section>
+        <ol>
+            <li>+79119897188</li>
+            <li>sl.ella@yandex.ru</li>
+        </ol>
+        <pre>
+            ( (
+             ) )
+            ( (  .-''''-.  A.-.A
+             \ \/        \/ , , \
+              \   \      =;  t  /=
+               \   |''''.  ',--'
+                / //    |  ||
+               |_||     |__||
+        </pre>
+    </footer>
 </body>
 </html>
