--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
 <body>
     <header>
         <nav>
-            Навигация по странице
+<!--            todo: -->
+            <ol>
+                <li><a href = "#Main">Главная</a></li>
+                <li><a href = "#Who">Кто мы такие?</a></li>
+                <li><a href = "#Albums">Альбомы</a></li>
+            </ol>
         </nav>
     </header>
     <main>
         <section>
+            <p id="Main"></p>
             <h1>Главная</h1>
         </section>
         <section>
+            <p id="Who"></p>
             <h1>Кто мы такие?</h1>
             <blockquote>
                 <p>It doesn't matter who we are. What matters is our music.</p>
@@ -26,6 +33,7 @@
             <p>Почему именно <strong>No Matter?</strong></p>
         </section>
         <section>
+            <p id="Albums"></p>
             <h1>Альбомы</h1>
         </section>
     </main>
@@ -33,10 +41,11 @@
         <section>
             <h4>Контактная информация</h4>
         </section>
-        <ol>
-            <li>+79119897188</li>
-            <li>sl.ella@yandex.ru</li>
-        </ol>
+        <ul>
+<!--            todo:-->
+            <li><a href="tel:+79119897188">+79119897188</a></li>
+            <li><a href="mailto:sl.ella@yandex.ru">sl.ella@yandex.ru</a></li>
+        </ul>
         <pre>
             ( (
              ) )
