--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#Main">Главная</a></li>
-                <li><a href="#Who">Кто мы такие?</a></li>
-                <li><a href="#Albums">Альбомы</a></li>
-            </ul>
-        </nav>
     </header>
     <main>
         <section>
             <p id="Main"></p>
-            <h1>Главная</h1>
+            <nav>
+                    <a class="Nav FirstElem" href="#Main">Главная</a>
+                    <a class="Nav" href="#Who">Кто мы такие?</a>
+                    <a class="Nav" href="#Albums">Альбомы</a>
+                    <a class="Nav LastElem" href="#Contacts">Контакты</a>
+                <div class="Logo">
+                    <img style="vertical-align: middle" src="3.svg" width="50" height="50" alt="Лого">
+                    <span style="vertical-align: middle">No Matter</span>
+                </div>
+            </nav>
         </section>
         <section>
             <p id="Who"></p>
@@ -28,32 +30,94 @@
                 <p>It doesn't matter who we are. What matters is our music.</p>
                 <cite>No Matter</cite>
             </blockquote>
+            <div class="Ura">
+                <img style="vertical-align: middle" src="4.jpg" alt="Юра Орёт">
+                <h2 style="vertical-align: middle">YURAORET</h2>
+                <p>День Рождения: 03.12.2005</p>
+                <p>Всем привет, меня зовут SHIMO, и я хочу немного рассказать вам про Юру. В
+                    первую очередь наверное хочется сказать, что это самый близкий для меня человек. Я обязан ему
+                    наверное всем, что у меня есть. Вы даже представить себе не можете, сколько раз он вытаскивал меня,
+                    помогал мне разобраться с собой и... никогда не оставлял</p>
+                <p>Правда, это самый искренний и светлый человек, которого я знаю. Может происходить что угодно, но Юра
+                    всегда останется собой, что бы ни случилось. Он может вести себя странно, неадекватно, ляпнуть
+                    что-то не к месту, как и все мы, но есть одно принципиальное отличие. Он всегда делает это от
+                    чистого сердца...</p>
+                <p>Юра дарит надежду всем людям вокруг себя. Надежду на то, что их жизнь будет прожита не зря. И знает,
+                    что ПРОЖИВЁТ свою жизнь, потому что может и хочет, а это для него главное<br>
+                    Вы не поверите, если я вам расскажу, настолько он вас всех любит и сколько всего каждый день делает
+                    ради вас. Неделями не будет спать, есть, дышать, но сделает всё, что в его силах.<br>
+                    Вот такой он человек.</p>
+                <p>Я бы даже сказал</p>
+                <p>Человек.</p>
+            </div>
+            <div class="Shimo">
+                <img style="vertical-align: middle" src="5.jpg" alt="Shimo">
+                <h2 style="vertical-align: middle">SHIMO</h2>
+                <p>День Рождения: 20.12.2004</p>
+                <p>Всем привет, я Юра и теперь я хочу рассказать вам немного про SHIMO.</p>
+                <p>Я дружу и работаю с ним уже много лет и видел, как он менялся, внешне, внутренне, неважно как. Но за
+                    все это в нем не изменились две очень важные черты. Во-первых, что бы он ни творил, как бы себя ни
+                    вел, я всегда знаю: либо он знает, что делает, и все идет по плану, либо он обязательно сможет найти
+                    выход. А во-вторых, я знаю, что у него внутри огромное, и вы бы знали насколько чуткое и любящее
+                    всех, сердце. Я всегда могу положиться на него. Неважно где мы, когда последний раз общались и что у
+                    него там сейчас. Я просто знаю, что, если нужно, он все сделает ради своих друзей и родных.</p>
+                <p>Это самый честный человек, которого я знаю. Человек, который честен с собой и с другими, а таких я
+                    знаю невероятно мало. Для него данное слово дороже всего, он порвется, но сделает все, чтобы
+                    сдержать обещание.</p>
+                <p>SHIMO всегда генерирует идеи, что-то придумывает, а когда начинает делать, то доводит все до идеала,
+                    чего бы ему этого не стоило. Это касается и работы, и жизни.</p>
+                <p>Он все время меняет мир вокруг себя, не дает себе остановиться и дарит окружающим стимул двигаться
+                    вперед. Я не знаю, что было бы с NO MATTER без него. Да и что было бы со мной без него, но точно
+                    было бы скучнее, обыденней, короче да.</p>
+                <p>В общем, вы спросите: «Вау, а кто такой SHIMO?» - я скажу вам это все еще раз и буду говорить, пока
+                    вы не поймете эту душу.</p>
+                <p>Сильную и неповторимую</p>
+                <p>Душу</p>
+            </div>
             <p>Как появилась группа?</p>
             <p>Почему именно <strong>No Matter?</strong></p>
-        </section>
-        <section>
+
             <p id="Albums"></p>
             <h1>Альбомы</h1>
+            <section class="Albums">
+                <figure>
+                    <picture>
+                        <a href="https://sfm.click/b/vUDd"><img src="sorry.jpg" width="75%" height="75%"></a>
+                    </picture>
+                    <figcaption>
+                        <a href="https://sfm.click/b/vUDd">Прости</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <picture>
+                        <a href="https://sfm.click/b/FXKd"><img src="solt.jpg" width="75%" height="75%" alt="Соль"></a>
+                    </picture>
+                    <figcaption>
+                        <a href="https://sfm.click/b/FXKd">Соль</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <picture>
+                        <a href="https://sfm.click/b/lMp7"><img src="ne_navid_mena.jpg" width="75%" height="75%" alt="Ненавидь меня"></a>
+                    </picture>
+                    <figcaption>
+                        <a href="https://sfm.click/b/lMp7">Ненавидь меня</a>
+                    </figcaption>
+                </figure>
+            </section>
         </section>
     </main>
     <footer>
         <section>
+            <p id="Contacts"></p>
             <h4>Контактная информация</h4>
         </section>
-        <ul>
-            <li><a href="tel:+79119897188">+79119897188</a></li>
-            <li><a href="mailto:sl.ella@yandex.ru">sl.ella@yandex.ru</a></li>
-        </ul>
-        <pre>
-            ( (
-             ) )
-            ( (  .-''''-.  A.-.A
-             \ \/        \/ , , \
-              \   \      =;  t  /=
-               \   |''''.  ',--'
-                / //    |  ||
-               |_||     |__||
-        </pre>
+        <a href="tel:+79216344017"><img src="phone.png" width="20" height="20"></a>
+        <!--<a href="mailto:sl.ella@yandex.ru">sl.ella@yandex.ru</a>-->
+        <a href="https://vk.com/nomattermusic"><img src="VK%20Logo%20White.svg" width="20" height="20" alt="Мы в ВК"></a>
+        <a href="https://t.me/joinchat/g8B5ZuT_jU1iZGQy"><img src="tg.png" width="20" height="20" alt="Мы в Телеграмме"></a>
+        <a href="https://www.youtube.com/channel/UClcHwZbCwXWLRM3ZaXavtKg"><img src="youtube.png" width="20" height="20"></a>
+        <a href="https://www.instagram.com/no_omatter/"><img src="instagram.png" width="20" height="20"></a>
     </footer>
 </body>
 </html>
