--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <section>
             <p id="Main"></p>
             <nav>
-                    <a class="Nav FirstElem" href="#Main">Главная</a>
+                    <a class="Nav" href="#Main">Главная</a>
                     <a class="Nav" href="#Who">Кто мы такие?</a>
                     <a class="Nav" href="#Albums">Альбомы</a>
-                    <a class="Nav LastElem" href="#Contacts">Контакты</a>
-                <div class="Logo">
-                    <img style="vertical-align: middle" src="3.svg" width="50" height="50" alt="Лого">
-                    <span style="vertical-align: middle">No Matter</span>
-                </div>
+                    <a class="Nav" href="#Contacts">Контакты</a>
             </nav>
+            <div class="Logo">
+                <img style="vertical-align: middle" src="3.svg" width="50" height="50" alt="Лого">
+                <span style="vertical-align: middle">No Matter</span>
+            </div>
         </section>
         <section>
             <p id="Who"></p>
@@ -44,7 +44,7 @@
                     чистого сердца...</p>
                 <p>Юра дарит надежду всем людям вокруг себя. Надежду на то, что их жизнь будет прожита не зря. И знает,
                     что ПРОЖИВЁТ свою жизнь, потому что может и хочет, а это для него главное<br>
-                    Вы не поверите, если я вам расскажу, настолько он вас всех любит и сколько всего каждый день делает
+                    Вы не поверите, если я вам расскажу, насколько он вас всех любит и сколько всего каждый день делает
                     ради вас. Неделями не будет спать, есть, дышать, но сделает всё, что в его силах.<br>
                     Вот такой он человек.</p>
                 <p>Я бы даже сказал</p>
@@ -82,7 +82,7 @@
             <section class="Albums">
                 <figure>
                     <picture>
-                        <a href="https://sfm.click/b/vUDd"><img src="sorry.jpg" width="75%" height="75%"></a>
+                        <a href="https://sfm.click/b/vUDd"><img src="sorry.jpg" width="75%" height="75%" alt="Обложка Прости"></a>
                     </picture>
                     <figcaption>
                         <a href="https://sfm.click/b/vUDd">Прости</a>
@@ -90,7 +90,7 @@
                 </figure>
                 <figure>
                     <picture>
-                        <a href="https://sfm.click/b/FXKd"><img src="solt.jpg" width="75%" height="75%" alt="Соль"></a>
+                        <a href="https://sfm.click/b/FXKd"><img src="solt.jpg" width="75%" height="75%" alt="Обложка Соль"></a>
                     </picture>
                     <figcaption>
                         <a href="https://sfm.click/b/FXKd">Соль</a>
@@ -98,7 +98,7 @@
                 </figure>
                 <figure>
                     <picture>
-                        <a href="https://sfm.click/b/lMp7"><img src="ne_navid_mena.jpg" width="75%" height="75%" alt="Ненавидь меня"></a>
+                        <a href="https://sfm.click/b/lMp7"><img src="ne_navid_mena.jpg" width="75%" height="75%" alt="Обложка Ненавидь меня"></a>
                     </picture>
                     <figcaption>
                         <a href="https://sfm.click/b/lMp7">Ненавидь меня</a>
