--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
     </header>
     <main>
-        <section>
+        <section class="Main">
             <p id="Main"></p>
-            <nav>
-                    <a class="Nav" href="#Main">Главная</a>
-                    <a class="Nav" href="#Who">Кто мы такие?</a>
-                    <a class="Nav" href="#Albums">Альбомы</a>
-                    <a class="Nav" href="#Contacts">Контакты</a>
-            </nav>
+            <div class="Nav">
+                    <a href="#Main">Главная</a>
+                    <a href="#Who">Кто мы такие?</a>
+                    <a href="#Albums">Альбомы</a>
+                    <a href="#Contacts">Контакты</a>
+            </div>
             <div class="Logo">
                 <img style="vertical-align: middle" src="3.svg" width="50" height="50" alt="Лого">
                 <span style="vertical-align: middle">No Matter</span>
