--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>No Matter</title>
     <link href="outlines.css" rel="stylesheet">
     <script src="script.js"></script>
+    <script src="script2.js"></script>
     <meta name="keywords" content="No matter, группа, музыкальная группа">
 </head>
 <body>
@@ -14,11 +15,12 @@
         <section class="Main">
             <p id="Main"></p>
             <div class="Nav">
-                    <a href="#Main">Главная</a>
-                    <a href="#Concerts">Концерты</a>
-                    <a href="#Who">Кто мы такие?</a>
-                    <a href="#Albums">Альбомы</a>
-                    <a href="#Contacts">Контакты</a>
+                <a href="#Main">Главная</a>
+                <a href="#Concerts">Концерты</a>
+                <a href="#Who">Кто мы такие?</a>
+                <a href="#Albums">Альбомы</a>
+                <a href="#Photo">Фотографии</a>
+                <a href="#Contacts">Контакты</a>
             </div>
             <div class="Logo">
                 <img style="vertical-align: middle" src="3.svg" width="50" height="50" alt="Лого">
@@ -29,8 +31,8 @@
             <p id="Concerts"></p>
             <h1>Концерты</h1>
             <div class="Concert">
-            <h3>Пока нет(</h3>
-            <a href="#openModal">Оставьте данные, чтобы мы сообщили вам о них!</a>
+                <h3>Пока нет(</h3>
+                <a href="#openModal">Оставьте данные, чтобы мы сообщили вам о них!</a>
                 <p><a href="generator.html">Добавим концертик</a></p>
             </div>
         </section>
@@ -45,19 +47,25 @@
                 <img style="vertical-align: middle" src="4.jpg" alt="Юра Орёт">
                 <h2 style="vertical-align: middle">YURAORET</h2>
                 <p>День Рождения: 03.12.2005</p>
-                <p>Всем привет, меня зовут SHIMO, и я хочу немного рассказать вам про Юру. В
+                <p>
+                    Всем привет, меня зовут SHIMO, и я хочу немного рассказать вам про Юру. В
                     первую очередь наверное хочется сказать, что это самый близкий для меня человек. Я обязан ему
                     наверное всем, что у меня есть. Вы даже представить себе не можете, сколько раз он вытаскивал меня,
-                    помогал мне разобраться с собой и... никогда не оставлял</p>
-                <p>Правда, это самый искренний и светлый человек, которого я знаю. Может происходить что угодно, но Юра
+                    помогал мне разобраться с собой и... никогда не оставлял
+                </p>
+                <p>
+                    Правда, это самый искренний и светлый человек, которого я знаю. Может происходить что угодно, но Юра
                     всегда останется собой, что бы ни случилось. Он может вести себя странно, неадекватно, ляпнуть
                     что-то не к месту, как и все мы, но есть одно принципиальное отличие. Он всегда делает это от
-                    чистого сердца...</p>
-                <p>Юра дарит надежду всем людям вокруг себя. Надежду на то, что их жизнь будет прожита не зря. И знает,
+                    чистого сердца...
+                </p>
+                <p>
+                    Юра дарит надежду всем людям вокруг себя. Надежду на то, что их жизнь будет прожита не зря. И знает,
                     что ПРОЖИВЁТ свою жизнь, потому что может и хочет, а это для него главное<br>
                     Вы не поверите, если я вам расскажу, насколько он вас всех любит и сколько всего каждый день делает
                     ради вас. Неделями не будет спать, есть, дышать, но сделает всё, что в его силах.<br>
-                    Вот такой он человек.</p>
+                    Вот такой он человек.
+                </p>
                 <p>Я бы даже сказал</p>
                 <p>Человек.</p>
             </div>
@@ -66,22 +74,32 @@
                 <h2 style="vertical-align: middle">SHIMO</h2>
                 <p>День Рождения: 20.12.2004</p>
                 <p>Всем привет, я Юра и теперь я хочу рассказать вам немного про SHIMO.</p>
-                <p>Я дружу и работаю с ним уже много лет и видел, как он менялся, внешне, внутренне, неважно как. Но за
+                <p>
+                    Я дружу и работаю с ним уже много лет и видел, как он менялся, внешне, внутренне, неважно как. Но за
                     все это в нем не изменились две очень важные черты. Во-первых, что бы он ни творил, как бы себя ни
                     вел, я всегда знаю: либо он знает, что делает, и все идет по плану, либо он обязательно сможет найти
                     выход. А во-вторых, я знаю, что у него внутри огромное, и вы бы знали насколько чуткое и любящее
                     всех, сердце. Я всегда могу положиться на него. Неважно где мы, когда последний раз общались и что у
-                    него там сейчас. Я просто знаю, что, если нужно, он все сделает ради своих друзей и родных.</p>
-                <p>Это самый честный человек, которого я знаю. Человек, который честен с собой и с другими, а таких я
+                    него там сейчас. Я просто знаю, что, если нужно, он все сделает ради своих друзей и родных.
+                </p>
+                <p>
+                    Это самый честный человек, которого я знаю. Человек, который честен с собой и с другими, а таких я
                     знаю невероятно мало. Для него данное слово дороже всего, он порвется, но сделает все, чтобы
-                    сдержать обещание.</p>
-                <p>SHIMO всегда генерирует идеи, что-то придумывает, а когда начинает делать, то доводит все до идеала,
-                    чего бы ему этого не стоило. Это касается и работы, и жизни.</p>
-                <p>Он все время меняет мир вокруг себя, не дает себе остановиться и дарит окружающим стимул двигаться
+                    сдержать обещание.
+                </p>
+                <p>
+                    SHIMO всегда генерирует идеи, что-то придумывает, а когда начинает делать, то доводит все до идеала,
+                    чего бы ему этого не стоило. Это касается и работы, и жизни.
+                </p>
+                <p>
+                    Он все время меняет мир вокруг себя, не дает себе остановиться и дарит окружающим стимул двигаться
                     вперед. Я не знаю, что было бы с NO MATTER без него. Да и что было бы со мной без него, но точно
-                    было бы скучнее, обыденней, короче да.</p>
-                <p>В общем, вы спросите: «Вау, а кто такой SHIMO?» - я скажу вам это все еще раз и буду говорить, пока
-                    вы не поймете эту душу.</p>
+                    было бы скучнее, обыденней, короче да.
+                </p>
+                <p>
+                    В общем, вы спросите: «Вау, а кто такой SHIMO?» - я скажу вам это все еще раз и буду говорить, пока
+                    вы не поймете эту душу.
+                </p>
                 <p>Сильную и неповторимую</p>
                 <p>Душу</p>
             </div>
@@ -92,7 +110,7 @@
             <h1>Альбомы</h1>
             <div class="Albums slideshow-container">
                 <div class="Album mySlides">
-                    <a href="https://sfm.click/b/vUDd"><img src="sorry.jpg" width="75%" height="75%" alt="Обложка 'Прости'"></a>
+                    <a href="https://sfm.click/b/vUDd"><img src="sorry.jpg" width="75%" height="75%" alt="Обложка Прости"></a>
                     <div class="text">Прости</div>
                 </div>
                 <div class="Album mySlides">
@@ -112,6 +130,12 @@
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
+        </section>
+        <section>
+            <p id="Photo"></p>
+            <h1>Фотографии</h1>
+            <p id="preloader">Загрузка...</p>
+            <div id="Photos" class="slideshow-container"></div>
         </section>
     </main>
     <footer>
